@@ -147,11 +147,6 @@ PATCHES ACCEPTED TO BACKPORT FROM TRUNK:
      2.4.x patch: http://people.apache.org/~jim/patches/worker-trunc.patch
      +1: jim, ylavic, covener
 
-   * mod_macro: Remove APLOG_NOERRNO. Add some APLOGNO. Fix some alignment.
-     trunk patch: http://svn.apache.org/r1612466
-     2.4.x patch: trunk works
-     +1: jailletc36, rjung, covener
-
 PATCHES PROPOSED TO BACKPORT FROM TRUNK:
   [ New proposals should be added at the end of the list ]
 
