@@ -6,6 +6,9 @@ Changes with Apache 2.4.11
      mod_cache: Avoid a crash when Content-Type has an empty value.
      PR 56924.  [Mark Montague <mark catseye.org>, Jan Kaluza]
 
+  *) mod_macro: Add missing APLOGNO for some Warning log messages.
+     [Christophe Jaillet]
+
   *) mod_cache: Avoid sending 304 responses during failed revalidations
      PR56881. [Eric Covener]
 
